[gd_scene load_steps=6 format=3 uid="uid://bfvynflu5m65w"]

[ext_resource type="Script" path="res://src/projeciles/bullet.gd" id="1_822w1"]
[ext_resource type="Texture2D" uid="uid://dkn2vt4pb6jhi" path="res://assets/bullet_enemy.png" id="2_xnfuq"]
[ext_resource type="Texture2D" uid="uid://bbiit8wnmfj3c" path="res://assets/bullet_player.png" id="3_tfxvr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wh8us"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xnfuq")
}],
"loop": true,
"name": &"enemy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tfxvr")
}],
"loop": true,
"name": &"player",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u0w2i"]
radius = 11.0

[node name="Bullet" type="RigidBody2D"]
collision_mask = 14
gravity_scale = 0.0
script = ExtResource("1_822w1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wh8us")
animation = &"enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u0w2i")

[node name="DamageArea" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_u0w2i")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(0.65, 0.6)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
